[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/bosses/generalBossStuff/WorldStuff.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/audio/sfx/olderNoises/finishLevel.wav" type="AudioStream" id=2]
[ext_resource path="res://src/player/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/bosses/generalBossStuff/baseBossLand.gd" type="Script" id=4]

[node name="baseBossLand" type="Spatial"]
script = ExtResource( 4 )

[node name="WorldStuff" parent="." instance=ExtResource( 1 )]

[node name="OneSecondChecker" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="musicPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -20.0

[node name="finishLevel" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -30.0
autoplay = true

[node name="player" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 160, 30, 160 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 0, 0 )

[connection signal="timeout" from="OneSecondChecker" to="." method="_on_OneSecondChecker_timeout"]
[connection signal="finished" from="musicPlayer" to="." method="_on_musicPlayer_finished"]
